examples/test/testpolicy1648.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1648
  namespace: namespace81
spec:
  podSelector:
    matchLabels:
      key46: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value28
          key32: value23
          key37: value2
      podSelector:
        matchLabels:
          key43: value14
          key32: value39
          key18: value8
